# wtr-pfa-lfg-doit-gif

./: .flaskenv  .flaskenv.example  .gitignore  Makefile  README.md  config.py  local_settings.example.py  main.py  migrate_db.sh  pyproject.toml  setup_dev.sh  wsgi.py
.github/workflows/: deploy.yml
app/: __init__.py
app/create_app/: __init__.py  create_app.py  create_migration_app.py  extensions.py
app/models/: __init__.py
app/models/db/: user.py
app/routes/: main_routes.py
app/static/css/: style.css
app/templates/: base.html  index.html  login.html  register.html  settings.html
deploy/configs/nginx/: myapp.conf
deploy/configs/systemd/: myapp.service
docs/: architecture.md  ci-cd.md  operations.md  production-setup.md  troubleshooting.md
migrations/: .gitkeep
tests/: test_basic.py
