[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-app-name"
version = "0.1.0"
description = "Your Flask Application"
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.0.0",
    "Flask-Login>=0.6.3",
    "Flask-Migrate>=4.0.5",
    "Flask-WTF>=1.2.1",
    "Flask-Compress>=1.14",
    "Flask-Cors>=4.0.0",
    "gunicorn>=21.2.0",
    "gevent>=23.9.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "Jinja2>=3.1.2",
    "Werkzeug>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-flask>=1.2.0",
]

[tool.uv]
package = false
